Step 4: Fix Deprecated URL Constructor Usage. Build status: Success